--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-core": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
+    "boom": "^3.1.2",
     "hapi": "^13.3.0",
     "joi": "^8.0.5",
     "sparql-http-client": "^0.1.0"
