--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,14 @@ node_js:
 - "4.0"
 - "4"
 - "5"
+
+install:
+  - npm install
+  - npm install -g codeclimate-test-reporter
+
+script:
+  - npm run lint
+  - npm run test:cov
+
+after_script:
+  - codeclimate-test-reporter < coverage/lcov.info
