--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "homepage": "https://github.com/cecton/hapi-sparql#readme",
   "dependencies": {
+    "boom": "^3.1.2",
+    "joi": "^8.0.5",
     "sparql-http-client": "^0.1.0"
   },
   "devDependencies": {
@@ -50,8 +52,6 @@
     "standard": "^6.0.8"
   },
   "peerDependencies": {
-    "boom": ">= 3.x.x",
-    "hapi": ">= 13.x.x",
-    "joi": ">= 8.x.x"
+    "hapi": ">= 13.x.x"
   }
 }
