--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-sparql",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "description": "A simple Hapi SPARQL connection plugin",
   "main": "dist/index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "standard": {
     "parser": "babel-eslint",
     "globals": [
+      "describe",
       "it"
     ],
     "ignore": [
