--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ node_js:
 install:
   - npm install
   - npm install hapi joi boom
-  - npm install -g codeclimate-test-reporter
+  - npm install -g codeclimate-test-reporter codecov
 
 script:
   - npm run lint
@@ -18,3 +18,4 @@ script:
 
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
+  - codecov
